# SimpleHandEye

./: README.md  setup.cfg
SimpleHandEye/: conversions.py  exporters.py  optimizers.py  solvers.py
SimpleHandEye/interfaces/: apriltag.py  base.py  cameras.py  chessboard.py  ros.py  ros2.py  utils.py
doc/: eye-on-base.drawio  eye_on_hand.drawio  logo  multi_camera_extrinsics.drawio  openfig.excalidraw
docs/source/: conf.py  index.md
docs/source/tutorials/: index.md
examples/: b1-calibration.ipynb  b1-calibration_usb.ipynb  flexiv_handeye_calib.ipynb  fr3-vicon-dataset.pkl  fr3-vicon.ipynb  ros2_axyb.ipynb  tf_printer.py  tracker_test.ipynb  wall_T_tag.launch  world_T_camera.launch
