[metadata]
name = SimpleHandEye
version = 1.0.0
description = Easy to use and hardware independent Python hand-eye calibration library. 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Rooholla-KhorramBakht/SimpleHandEye
author = Rooholla Khorrambakht
author_email = rk4342@nyu.edu
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License

[options]
packages = find:
include_package_data = True
install_requires =
    opencv-python

[options.extras_require]
doc = 
    sphinx==4.2.0
    myst-parser
    nbsphinx
    sphinx_book_theme
    sphinx-autobuild
    sphinx-autoapi
    sphinxcontrib-youtube
    sphinx_design

# [options.package_data]
# * = unitree_legged_sdk/amd64/*.so, unitree_legged_sdk/arm64/*.so
